@@ -1,3 +1,8 @@
+2003-12-31  Albert Chu  <chu11@llnl.gov>
+
+	* src/libgendersllnl/Makefile.am, src/Gendersllnl/Gendersllnl.pm:
+	Began consistent library versioning.
+	
 2003-12-30  Albert Chu  <chu11@llnl.gov>
 
 	Added copyright header to all files.
